--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@ body {
   font-family: sans-serif;
 }
 
+img {
+  width: 100%;
+  border-radius: 50%;
+}
+
 /* ***********UTILITIES************ */
 .flex { display: flex; }
 .v-a-center { vertical-align: center; }
@@ -34,10 +39,7 @@ body {
   height: calc(100vh - 50px);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-img {
-  width: 100%;
-  border-radius: 50%;
-}
+
 .contacts {
   width: 400px;
 }
@@ -69,4 +71,26 @@ img {
   margin: 0 5px;
   color: #b1b1b1;
   font-size: 1.5rem;
+}
+.notification {
+  background-color: #8edafc;
+  padding: 15px;
+  display: flex;
+  column-gap: 10px;
+}
+.notification span{
+  background-color: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  cursor: pointer;
+}
+.notification span i{
+  color: #8edafc;
+}
+.notification u{
+  color:slategrey;
+  cursor: pointer;
 }
