--- a/css/style.css
+++ b/css/style.css
@@ -65,12 +65,17 @@ img {
   margin-right: 10px;
 }
 .top-grey-buttons button {
-  border-color: #eaeaea;
+  border: none;
+  background-color: transparent;
+}
+.top-grey-buttons i:hover {
+  filter: contrast(0.1);
 }
 .top-grey-buttons i {
   margin: 0 5px;
   color: #b1b1b1;
   font-size: 1.5rem;
+  filter:contrast(1);
 }
 .notification {
   background-color: #8edafc;
