--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,7 @@ img {
 }
 .profile-image {
   width: 50px;
+  cursor: pointer;
 }
 .top-grey-buttons {
   display: flex;
@@ -117,6 +118,7 @@ img {
   padding: 5px 15px;
   background-color: white;
   border: 2px solid grey;
+  cursor: pointer;
 }
 .search input {
   width: 83%;
