--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ img {
   padding: 5px 15px;
 }
 .contacts-list {
-  background-color: white;
+  background-color: rgb(228, 228, 228);
   height: calc(100% - 200px);
   overflow-y: scroll;
 }
